tests/typing/good/testfile-underscore-5.go
package main

func main() { var _,_ int }
