tests/typing/bad/testfile-duplicate-6.go
package main

func foo(x,x int) {}
func main() {}
